<resources>
    <string name="app_name">Cyclemon</string>
    <string name="background_spring">Background Spring</string>

    <string name="home">Home</string>
    <string name="pet">Pet</string>
    <string name="shop">Shop</string>
    <string name="settings">Settings</string>
    <string name="bike">Bike</string>
    <string name="_30_km">30 km</string>
    <string name="_3_0_km">3.0 KM</string>
    <string name="on_a_ride">On a ride...</string>
    <string name="distance_cycled">Distance Cycled:</string>
    <string name="avg_speed">Avg. Speed:</string>
    <string name="_10_km_hr">10 KM/HR</string>
    <string name="_5_km">5 km Traveled</string>

</resources>